[CHATS-201] Getting workspace
Approved-by: Alberto Pontini